# ml1-final-code

./: .gitignore  README.md  feature_manifest.csv  feature_research_audit.py  fetch_natstat_full_history.py  generate_official_brackets.py  natstat API v3.5 Documentation  ncaa_march_madness.ipynb  project_outline  requirements.txt
NCAA_ML/: main.tex
artifacts_modeling/: accepted_models_v2.csv  artifact_index.csv  baseline_ablation_results.csv  bracket_error_bins_2026.csv  bracket_mbb_model.joblib  bracket_official_preview.html  bracket_preview.html  bracket_wbb_model.joblib  calibration_results_v2.csv  dataset_versions.csv  feature_manifest_v2.csv  feature_permutation_importance_v2.csv  final_2026_eval_v2.csv  final_feature_lists_v2.csv  final_model_choices_v2.csv  holdout_counts.csv  label_permutation_results.csv  leakage_risk_v2.csv  live_2026_bracket_projection_mbb.csv  (+18 more)
src/: main.py  ncaa_prediction_uv_package.py  pyproject.toml
src/ncaa_pred/app/: streamlit_app.py
src/ncaa_pred/ncaa_pred/: __init__.py
src/ncaa_pred/ncaa_pred/data/: loader.py
src/ncaa_pred/ncaa_pred/mcts/: __init__.py  node.py  search.py
src/ncaa_pred/ncaa_pred/models/: predictor.py
src/ncaa_pred/ncaa_pred/search/: __init__.py  bm25.py  cli.py  corpus_builder.py  embedding_backend.py  index_builder.py  retriever.py  summarizer.py  train_embedder.py  types.py  weak_labels.py
src/notebooks/: EDA_Rios.ipynb  Final_Project_EDA.ipynb
src/tests/: conftest.py  test_bbhell_sandbox.py  test_search_corpus_builder.py  test_search_filters.py  test_search_retriever.py  test_search_weak_labels.py
